[package]
name = "common-ssh-agent-rust"
version = "0.1.0"
edition = "2021"
description = "Shared Rust utilities for Keyguard SSH agent binaries"

[dependencies]
prost = "0.13"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
tokio = { version = "1", features = ["net"] }

[build-dependencies]
prost-build = "0.13"
